[workspace]
resolver = "2"
members = [
    "clients/rust",
    "interface",
    "program",
]

[workspace.package]
version = "0.2.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>", "SphereNet Contributors"]
repository = "https://github.com/Sphere-Foundation/stake"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
# Internal dependencies
spherenet-stake-interface = { version = "^0", path = "interface" }

[workspace.metadata.cli]
solana = "3.0.0"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("codama", "custom-heap", "custom-panic", "frozen-abi", "no-entrypoint"))',
]

[workspace.metadata.toolchains]
build = "1.90.0"
format = "nightly-2025-02-16"
lint = "nightly-2025-02-16"
test = "nightly-2025-02-16"

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"
